Adding color choices directly to pop-up menu

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,8 @@
       </style>
     </head>
     <body>
-      <button id="changeColor"></button>
+      <button id="changeColor1"></button>
+      <button id="changeColor2"></button>
       <script src="popup.js"></script>
     </body>
   </html>
